package com.qmp;

import java.util.List;

import com.qmp.prendas.Prenda;

public class Atuendo {
  List<Prenda> prendas;
  
  Atuendo(List<Prenda> prendas) {
    this.prendas = prendas;
  }
}
