package com.qmp.clima;

public interface ClimaFeed {
  public Double temperaturaCelsius(String ciudad);
}
