package com.qmp.prendas;

public enum CategoriaPrenda {
  SUPERIOR,
  INFERIOR,
  CALZADO,
  ACCESORIO;
}
