package com.qmp.prendas;

public enum Material {
  ALGODON,
  SEDA,
  POLIESTER,
  JEAN,
  CUERO,
  LINO,
  PIQUE,
  ACETATO
}
